[package]
authors    =["Thor Kamphefner <thorck@pm.me>"]
description="""a binary to publish blog posts"""
edition    ="2021"

name       ="tk-blog-publish"
repository ="https://github.com/thor314/tk-blog-publish"
version    ="0.1.0"

[dependencies]
anyhow   ="1.0"
log       ="0.4" 

thiserror="1.0"
env_logger = "0.11"
dotenv = "0.15"
# tracing = "0.1"
# tracing-subscriber = {version = "0.3", features = ["env-filter"]}

clap = {version = "4.4.16", features = ["derive"]}
chrono = "0.4.32"
regex = "1.10.3"
toml = "0.8.8"
serde = { version = "1.0.195", features = ["derive"] }


[dev-dependencies]

criterion ="0.5"
rstest    ="0.18"         # testing convenience proc-macros

arbitrary         ={ version = "1.1", features = ["derive"] } # see quickcheck
quickcheck        ="1.0"      # lowkey proptest suite
quickcheck_macros ="1" # derive 




